@@ -1,6 +1,6 @@
-@comment $NetBSD: PLIST,v 1.2 2002/01/28 16:55:54 wiz Exp $
+@comment $NetBSD: PLIST,v 1.3 2002/12/22 14:59:25 agc Exp $
 bin/tkcvs
-bin/tkdiff
+bin/tkdiffb
 man/man1/tkcvs.1
 share/doc/tkcvs/README.tkcvs
 share/tkcvs/bitmaps/add.gif
@@ -13,16 +13,22 @@ share/tkcvs/bitmaps/arrow_hl_up.gif
 share/tkcvs/bitmaps/arrow_up.gif
 share/tkcvs/bitmaps/ball.gif
 share/tkcvs/bitmaps/branch.gif
+share/tkcvs/bitmaps/branch.xbm
 share/tkcvs/bitmaps/branchtag.gif
+share/tkcvs/bitmaps/check.gif
 share/tkcvs/bitmaps/checkin.gif
 share/tkcvs/bitmaps/checkout.gif
-share/tkcvs/bitmaps/clean.gif
-share/tkcvs/bitmaps/clear.gif
+share/tkcvs/bitmaps/checkout_opts.gif
 share/tkcvs/bitmaps/conflict.gif
+share/tkcvs/bitmaps/cvs-says.xbm
 share/tkcvs/bitmaps/cvsdir.gif
 share/tkcvs/bitmaps/delete.gif
 share/tkcvs/bitmaps/diff.gif
 share/tkcvs/bitmaps/dir.gif
+share/tkcvs/bitmaps/dir.xbm
+share/tkcvs/bitmaps/dir_new.gif
+share/tkcvs/bitmaps/dirbranch.gif
+share/tkcvs/bitmaps/dirbranch.xbm
 share/tkcvs/bitmaps/edit.gif
 share/tkcvs/bitmaps/export.gif
 share/tkcvs/bitmaps/fileedit.gif
@@ -30,21 +36,21 @@ share/tkcvs/bitmaps/files.gif
 share/tkcvs/bitmaps/fileview.gif
 share/tkcvs/bitmaps/folder.gif
 share/tkcvs/bitmaps/folderopen.gif
-share/tkcvs/bitmaps/gray75.xbm
 share/tkcvs/bitmaps/import.gif
 share/tkcvs/bitmaps/logfile.gif
 share/tkcvs/bitmaps/loop-glasses.gif
 share/tkcvs/bitmaps/loop-half.gif
 share/tkcvs/bitmaps/loop.gif
+share/tkcvs/bitmaps/man.gif
 share/tkcvs/bitmaps/mdir.gif
-share/tkcvs/bitmaps/mergebranch.gif
-share/tkcvs/bitmaps/mergediff.gif
+share/tkcvs/bitmaps/merge.gif
+share/tkcvs/bitmaps/merge_changes.gif
 share/tkcvs/bitmaps/mod.gif
 share/tkcvs/bitmaps/modbrowse.gif
-share/tkcvs/bitmaps/modules.gif
 share/tkcvs/bitmaps/paper.gif
 share/tkcvs/bitmaps/patches.gif
 share/tkcvs/bitmaps/patchfile.gif
+share/tkcvs/bitmaps/rcsdir.gif
 share/tkcvs/bitmaps/refresh.gif
 share/tkcvs/bitmaps/remove.gif
 share/tkcvs/bitmaps/stat_conf.gif
@@ -54,19 +60,22 @@ share/tkcvs/bitmaps/stat_merge.gif
 share/tkcvs/bitmaps/stat_minus.gif
 share/tkcvs/bitmaps/stat_mod.gif
 share/tkcvs/bitmaps/stat_ok.gif
-share/tkcvs/bitmaps/stat_okay.gif
 share/tkcvs/bitmaps/stat_ood.gif
 share/tkcvs/bitmaps/stat_plus.gif
 share/tkcvs/bitmaps/stat_plus_kb.gif
 share/tkcvs/bitmaps/stat_ques.gif
+share/tkcvs/bitmaps/stat_rcs.gif
+share/tkcvs/bitmaps/stat_rcs_mod.gif
 share/tkcvs/bitmaps/tag.gif
 share/tkcvs/bitmaps/tags.gif
+share/tkcvs/bitmaps/tick.xbm
 share/tkcvs/bitmaps/ticklefish_med.gif
 share/tkcvs/bitmaps/tkcvs-ghost.xbm
 share/tkcvs/bitmaps/tkcvs-help.xbm
 share/tkcvs/bitmaps/tkcvs48.xbm
 share/tkcvs/bitmaps/trace.xbm
 share/tkcvs/bitmaps/unedit.gif
+share/tkcvs/bitmaps/updir.gif
 share/tkcvs/bitmaps/who.gif
 share/tkcvs/annotate.tcl
 share/tkcvs/cde_params.tcl
@@ -80,11 +89,13 @@ share/tkcvs/filebrowse.tcl
 share/tkcvs/gen_log.tcl
 share/tkcvs/help.tcl
 share/tkcvs/import.tcl
+share/tkcvs/joincanvas.tcl
 share/tkcvs/logcanvas.tcl
 share/tkcvs/merge.tcl
 share/tkcvs/modbrowse.tcl
 share/tkcvs/modtree.tcl
 share/tkcvs/modules.tcl
+share/tkcvs/picklist.tcl
 share/tkcvs/reports.tcl
 share/tkcvs/scrollbindings.tcl
 share/tkcvs/search.tcl
