@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.6 2002/01/28 16:55:54 wiz Exp $
+$NetBSD: distinfo,v 1.7 2002/12/22 14:59:25 agc Exp $
 
-SHA1 (tkcvs-7_03.tar.gz) = 751137d7a4067b30a12fd5da2d34ed7b58b982aa
-Size (tkcvs-7_03.tar.gz) = 218921 bytes
-SHA1 (patch-aa) = 698b041bb86759c16c536931209758a67e2f616a
+SHA1 (tkcvs_7_1_2.tar.gz) = 01342ef43bb6d04bb1daa9b760510ccc60e8ba6a
+Size (tkcvs_7_1_2.tar.gz) = 239874 bytes
+SHA1 (patch-aa) = 6e052f9b1a697665a965db409c5592e115fe2832
