@@ -1,22 +1,27 @@
-$NetBSD: patch-aa,v 1.7 2002/01/28 16:55:55 wiz Exp $
+$NetBSD: patch-aa,v 1.8 2002/12/22 14:59:26 agc Exp $
 
 --- doinstall.tcl.orig	Wed Jan 23 18:18:03 2002
 +++ doinstall.tcl
-@@ -2,5 +2,5 @@
+@@ -1,7 +1,7 @@
+ #!/bin/sh
  #-*-tcl-*-
  # the next line restarts using wish \
 -if [ -z "$DISPLAY" ]; then exec tclsh "$0" -- ${1+"$@"}; else exec wish "$0" -- ${1+"$@"}; fi
 +exec tclsh "$0" -- ${1+"$@"}
  
  #
-@@ -29,5 +29,5 @@
+ # $Id: patch-aa,v 1.8 2002/12/22 14:59:26 agc Exp $
+@@ -29,7 +29,7 @@
+     set MANDIR ""
    } else {
      set BINDIR [file join $INSTALLROOT bin]
 -    set LIBDIR [file join $INSTALLROOT lib]
 +    set LIBDIR [file join $INSTALLROOT share]
      set MANDIR [file join $INSTALLROOT man man1]
    }
-@@ -40,21 +40,4 @@
+ }
+@@ -40,23 +40,6 @@
+   global LIBDIR BINDIR MANDIR
  
    set_paths $INSTALLROOT
 -
@@ -38,7 +43,9 @@ $NetBSD: patch-aa,v 1.7 2002/01/28 16:55:55 wiz Exp $
 -  }
  }
  
-@@ -117,11 +100,4 @@
+ proc doinstall { INSTALLROOT } {
+@@ -117,13 +100,6 @@
+   }
    cd ..
    puts "Finished!"
 -
@@ -50,15 +57,18 @@ $NetBSD: patch-aa,v 1.7 2002/01/28 16:55:55 wiz Exp $
 -  }
  }
  
-@@ -136,10 +112,5 @@
+ ################################################################################
+@@ -132,12 +108,7 @@
+ set X 1
  
  # Check Tcl/TK version
--if {$tcl_version < 8.1} {
+-if {$tcl_version < 8.3} {
 -   tk_dialog .wrongversion "Tcl/Tk too old" \
--   "TkCVS requires Tcl/Tk 8.1 or better!" \
+-   "TkCVS requires Tcl/Tk 8.3 or better!" \
 -   error 0 {Bye Bye}
 -   exit 1
 -}
 +# This is done by the package Makefile
  
- # Some rational and reasonable defaults.
+ # Do this after checking tcl version, because 7.x doesn't have it.
+ puts "[info nameofexecutable]"
